# monorepo-python-sample

./: .codespellrc  .dockerignore  .git-commit-template.txt  .gitignore  .pre-commit-config.yaml  .terraform-docs-delete.yml  .terraform-docs.yml  .yaspellerrc.json  LICENSE.md  README.md  commitlint.config.js  poetry_run.py  pyproject.toml  pytest.stam  requirements.txt  ruff.toml  run_script.py
.devcontainer/: .env.ci  .env.sample  .env_sample  Dockerfile  devcontainer-ci.json  devcontainer.json  docker-compose.yml  install_packages.sh  post_create.sh
.github/: README.md  pull_request_template.md
.github/scripts/: aws-configure-credentials.sh  deploy-service-configuration.sh  run_db_migrations.sh  sam-build-and-deploy-services.sh  sam-build-updated-services.sh  terraform-validate-all.sh
.github/workflows/: README.md  ci.yml  debug-aws-login.yml  deploy-services-reusable.yml  deployment-dev-staging-disabled.yml  deployment-dev-staging-new.yml  deployment-dev-staging.yml  deployment-services-reusable.yml  integration-tests.yml  manually-deploy-services.yml  pre-build-devcontainer.yml  terraform-apply-reusable.yml  terraform-deployment-reusable.yml  terraform-deployment.yml  terraform-plan-reusable.yml  terraform-plan.yml
dbs/maindb/: alembic.ini
dbs/maindb/migrations/: README.md
docs/: semantic-release.md
infra/: README.md
infra/scripts/: .env.sample  README.md  account-setup-sample.env  terraform-iam-policy.json  terraform-setup.sh
infra/terraform/: README.md  appconfig_deployment_strategy.tf  backend.dev.tfvars  backend.local.tfvars  backend.prod.tfvars  backend.staging.tfvars  dev.tfplan  dev.tfvars  local.tfvars  main.tf  services.tf  variables.tf
infra/terraform/.terraform/modules/: modules.json
infra/terraform/environments/dev/: .terraform.lock.hcl  README.md  backend.tf  env.tfvars  main.tf  provider.tf  terraform.tfvars
infra/terraform/environments/dev/eu-west-1/: .terraform.lock.hcl  backend.tf  main.tf  outpus.tf  providers.tf
infra/terraform/environments/prod/: backend.tf  main.tf  provider.tf  terraform.tfvars  variables.tf
infra/terraform/environments/prod/us-east-1/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  providers.tf
infra/terraform/environments/staging/: .terraform.lock.hcl  backend.tf  main.tf  provider.tf  terraform.tfvars
infra/terraform/environments/staging/us-east-1/: .terraform.lock.hcl  backend.tf  main.tf  providers.tf
infra/terraform/modules/appconfig/: README.md  deployment_strategy.tf  variables.tf
infra/terraform/modules/appconfig-app/: README.md  variables.tf
infra/terraform/modules/appconfig_app/: main.tf
infra/terraform/modules/aws-appconfig-app/: README.md  main.tf  outputs.tf
infra/terraform/modules/aws-ecr-repo/: README.md  main.tf  variables.tf
infra/terraform/modules/aws-lambda/: README.md  lambda-shared-policy.tftpl  main.tf  outputs.tf  variables.tf
infra/terraform/modules/aws-rds/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/modules/ecr/: main.tf  variables.tf
infra/terraform/modules/ecr-repository/: .terraform.lock.hcl  README.md  lambda-access-policy.json  main.tf  outputs.tf  variables.tf
infra/terraform/modules/lambda/: .terraform.lock.hcl  README.md  appconfig-secretesmanager-policy.json  ecr-policy.json  main.tf  outputs.tf  variables.tf
infra/terraform/modules/maindb/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/modules/network/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
infra/terraform/modules/service/: .terraform.lock.hcl  README.md  appconfig_app.tf  main.tf  outputs.tf  variables.tf
infra/terraform/modules/service-base/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/modules/services/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/modules/services/greeting/: .terraform.lock.hcl  api.tf  main.tf  outputs.tf  variables.tf
infra/terraform/modules/services/hello-world/: main.tf
infra/terraform/modules/shared/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/modules/site-configurations/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/modules/ssm-instance/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/modules/ssm-tunnel/: README.md  main.tf  variables.tf
infra/terraform/modules/tests/: .terraform.lock.hcl  README.md  appconfig_app.tf  fake_secrets.tf  main.tf  outputs.tf  provider.tf  variables.tf
scripts/: run_pytest_on_impacted_folders.py
services/greeting/: Dockerfile  README.md  local.dev.env.json  local.env.json  pyproject.toml  requirements.txt  samconfig.toml  samconfig.toml.txt  template-local.yaml  template.yaml
services/greeting/.aws-sam/: build.toml
services/greeting/app/: app.py  app_test.py  configuration_provider.py  greeting_service.py  lambda_handler.py
services/greeting/config/: aws.dev.eu-west-1.json  aws.dev.us-east-1.json  aws.prod.us-east-1.json  config.dev.json  config.prod.us-east-1.json  local.dev.json
services/greeting/greeting/: app.py  app_configuration.py  greeting.py  greeting_configuration.py  greeting_service.py  greeting_service_test.py  lambda_handler.py  lambda_logging.py
services/greeting/src/: app.py  app_test.py  configuration_provider.py  greeting_service.py  greeting_service_test.py
services/greeting/tests/: app_test.py  greeting_lambda_integration_test.py  greeting_service_test.py  greeting_test.py
services/hello-world/: .gitignore  README.md  pyproject.toml  samconfig.toml  template-container.yaml  template.yaml
services/hello-world/hello_world/: app.py
services/hello-world/tests/: app_test.py
services/hello_world/: pyproject.toml  samconfig.toml  template.yaml
services/hello_world/.aws-sam/: build.toml
terraform/: variables.tf
