[tool.poetry]
name = "greeting"
version = "0.1.0"
description = "Greeting Service"
authors = ["Limor Lahiani"]
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
flask = "3.0.2"
jsonify = "0.5"
serverless-wsgi = "3.0.3"
configuration = { path = "../../packages/configuration", develop = true }

[tool.poetry.dev-dependencies]
pytest = "8.2.0"
