[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = "Hello World Service"
authors = ["Limor Lahiani"]
readme = "README.md"

[tool.semantic_release]
version_variable = "pyproject.toml:tool.poetry.version"
changelog_file = "CHANGELOG.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
jsonify = "0.5"


[tool.poetry.dev-dependencies]
pytest = "8.2.0"
pytest-asyncio = "0.23.6"
